# TimeTaggerRPC

./: .codespellrc  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml  python-test-publish.yml
TimeTaggerRPC/: __init__.py  client.py  helper.py  server.py
doc/: changelog.rst  conf.py  cookbook.rst  index.rst  internals.rst
doc/_static/: placeholder.txt
examples/: multiple_threads.py  simple_example.py  synchronized_measurements.py  synchronized_measurements_getTagger.py
tests/: test_client.py  test_enums.py  test_remote_object_destruction.py  test_remote_object_destruction_context_manager.py
