[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "TimeTaggerRPC"
author = "Igor Shavrin, Swabian Instruments GmbH"
author-email = "igor@swabianinstruments.com"
home-page = "https://github.com/swabianinstruments/TimeTaggerRPC"
description-file = "README.md"
requires = [
    "Pyro5",
    "numpy"
]
requires-python = ">=3.7,<4"
license = "BSD 3-Clause"
classifiers=[
    "License :: OSI Approved :: BSD License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.flit.metadata.urls]
Documentation = "https://timetaggerrpc.readthedocs.io/"
Hardware = "https://www.swabianinstruments.com/time-tagger/"

[tool.flit.scripts]
TimeTaggerRPC-server = "TimeTaggerRPC.server:main"

